fixed position mobile cart

--- a/src/styles.css
+++ b/src/styles.css
@@ -758,7 +758,6 @@ span.text-red {
   }
   .cart-bottom {
     padding: 30px 0;
-    position: static;
   }
   .total {
     justify-content: space-around;
